force-app/main/default/objects/POE_ChuzoLoginNotification__mdt/POE_ChuzoLoginNotification__mdt.object-meta.xml
<CustomObject>
    <description>Custom Metadata to create records for Chuzo Login Notifications</description>
    <label>Chuzo Login Notification</label>
    <pluralLabel>Chuzo Login Notifications</pluralLabel>
</CustomObject>