force-app/main/default/objects/POE_ChuzoLoginNotification__mdt/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>Message to display on the Login Page</description>
    <label>Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>