force-app/main/default/objects/POE_ChuzoLoginNotification__mdt/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <description>Programs for users that will receive notifications. [PER-4311]</description>
    <inlineHelpText>Allowed Values: DIRECTV, Spectrum, Earthlink, Windstream, Frontier, Optimum, All</inlineHelpText>
    <label>Program</label>
    <length>60</length>
    <type>Text</type>
</CustomField>