force-app/main/default/objects/POE_ChuzoLoginNotification__mdt/validationRules/Program_Selection_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Program_Selection_Validation</fullName>
    <active>true</active>
    <description>Validates that Program field contains valid values [PER-4311]</description>
    <errorConditionFormula>NOT(REGEX(Program__c, &quot;(?i)(DIRECTV|Spectrum|Earthlink|Windstream|Frontier|Optimum|All)( *, *(DIRECTV|Spectrum|Earthlink|Windstream|Frontier|Optimum|All))*&quot;))</errorConditionFormula>
    <errorDisplayField>Program__c</errorDisplayField>
    <errorMessage>Only values allowed are: DIRECTV, Spectrum, Earthlink, Windstream, Frontier, Optimum, All. They must be comma separated if multiple values are used.</errorMessage>
</ValidationRule>